// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grid renders default grid 1`] = `
.c0 {
  display: grid;
  grid-gap: 15px 15px;
  grid-template-columns: repeat( 1,1fr );
}

@media (min-width:767px) {
  .c0 {
    grid-gap: 30px 30px;
    grid-template-columns: repeat( 1,1fr );
  }
}

@media (min-width:1024px) {
  .c0 {
    grid-template-columns: repeat( 1,1fr );
  }
}

<div
  className="c0"
>
  Content
</div>
`;

exports[`Grid renders grid with custom gap 1`] = `
.c0 {
  display: grid;
  grid-gap: 15px 15px;
  grid-template-columns: repeat( 1,1fr );
  grid-gap: 6px 6px;
}

@media (min-width:767px) {
  .c0 {
    grid-gap: 6px 6px;
    grid-template-columns: repeat( 1,1fr );
  }
}

@media (min-width:1024px) {
  .c0 {
    grid-template-columns: repeat( 1,1fr );
  }
}

<div
  className="c0"
>
  Content
</div>
`;

exports[`Grid renders grid with given number of columns 1`] = `
.c0 {
  display: grid;
  grid-gap: 15px 15px;
  grid-template-columns: repeat( 1,1fr );
}

@media (min-width:767px) {
  .c0 {
    grid-gap: 30px 30px;
    grid-template-columns: repeat( 1,1fr );
  }
}

@media (min-width:1024px) {
  .c0 {
    grid-template-columns: repeat( 1,1fr );
  }
}

<div
  className="c0"
>
  Content
</div>
`;

exports[`Grid renders grid with given number of responsive columns [mobile, tablet, desktop] 1`] = `
.c0 {
  display: grid;
  grid-gap: 15px 15px;
  grid-template-columns: repeat( 1,1fr );
}

@media (min-width:767px) {
  .c0 {
    grid-gap: 30px 30px;
    grid-template-columns: repeat( 1,1fr );
  }
}

@media (min-width:1024px) {
  .c0 {
    grid-template-columns: repeat( 1,1fr );
  }
}

<div
  className="c0"
>
  Content
</div>
`;
